@@ -1,5 +1,9 @@
 2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gnulib/regcomp.c (regerror): Fix out-of-range array lookup.
+
+2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gdb/i386/idt.c (grub_gdb_breakpoint): Remove old debug code.
 
 2012-03-10  Vladimir Serbinenko  <phcoder@gmail.com>
